--- a/admin/models/forms/category.xml
+++ b/admin/models/forms/category.xml
@@ -601,15 +601,14 @@
 		
 		<fieldset name="cat_item_filtering" addfieldpath="/administrator/components/com_flexicontent/elements">
 		
-		<field name="" type="separator" default="FLEXI_SLIDER_SEARCH_MOD" description="" level="level2" hr="false" />
-			<field name="slider_mod" type="radio" default="0" label="FLEXI_SEARCH_MOD" description="FLEXI_SEARCH_MOD_DESC" class="btn-group btn-group-yesno">
-				<option value="0">FLEXI_NO</option>
-				<option value="1">FLEXI_YES</option>
-			</field>
-			<field name="slider_cat_title" type="text" size="20" default="" label="FLEXI_SLIDER_NAME" description="FLEXI_SLIDER_NAME_DESC" />
-			
 			<field name="" type="separator" default="FLEXI_SEARCH_FILTER_FORM" description="" level="level2" hr="false" />
-			<field name="show_search_go" type="radio" default="" label="FLEXI_SEARCH_GO_BUTTON" description="FLEXI_SEARCH_GO_BUTTON_DESC" class="btn-group btn-group-yesno">
+			<field name="ff_placement" type="multilist" subtype="radio" default="" label="FLEXI_SEARCH_FILTER_FORM_PLACEMENT" description="FLEXI_SEARCH_FILTER_FORM_PLACEMENT_DESC" class="btn-group group-fcsuccess">
+				<option value="">FLEXI_USE_GLOBAL</option>
+				<option value="0">FLEXI_SEARCH_FILTER_FORM_INLINE</option>
+				<option value="1">FLEXI_SEARCH_FILTER_FORM_SLIDER</option>
+			</field>
+			<field name="ff_slider_title" type="text" size="20" default="" label="FLEXI_SLIDER_NAME" description="FLEXI_SLIDER_NAME_DESC" />
+			<field name="show_search_go" type="multilist" subtype="radio" default="" label="FLEXI_SEARCH_GO_BUTTON" description="FLEXI_SEARCH_GO_BUTTON_DESC" class="btn-group group-fcsuccess">
 				<option value="">FLEXI_USE_GLOBAL</option>
 				<option value="0">FLEXI_AUTO</option>
 				<option value="1">FLEXI_SHOW</option>
