--- a/site/assets/css/flexi_shared.css
+++ b/site/assets/css/flexi_shared.css
@@ -1149,14 +1149,6 @@ ul.fcimport_field_value_list li { margin-bottom:0em; }
 	border: 1px solid lightgray;
 }
 
-#flexicontent div fieldset.panelform input,
-#flexicontent div fieldset.panelform textarea,
-#flexicontent div fieldset.panelform select,
-#flexicontent div fieldset.panelform img,
-#flexicontent div fieldset.panelform button {
-	float: left;
-}
-
 /* workaround yes-no forced styling */
 #flexicontent .btn {
 	-webkit-touch-callout: none;
@@ -1166,9 +1158,9 @@ ul.fcimport_field_value_list li { margin-bottom:0em; }
 	-ms-user-select: none;
 	user-select: none;
 }
-#flexicontent .group-fcinfo .btn,
-#flexicontent .group-fcprimary .btn,
-#flexicontent .group-fcinfo .btn {
+#flexicontent .group-fcinfo .btn:not(.btn-primary),
+#flexicontent .group-fcprimary .btn:not(.btn-primary),
+#flexicontent .group-fcinfo .btn:not(.btn-primary) {
 	color: #333 !important;
 	background-color: #e6e6e6 !important;
 	background-image: -webkit-gradient(linear, left top, left bottom, from(#ffffff), to(#e6e6e6)) !important;
@@ -1181,9 +1173,9 @@ ul.fcimport_field_value_list li { margin-bottom:0em; }
 	border-color: #bbb #bbb #a2a2a2 !important;
 	border-image: none !important;
 }
-#flexicontent .group-fcinfo .btn.active,
-#flexicontent .group-fcprimary .btn.active,
-#flexicontent .group-fcsuccess .btn.active {
+#flexicontent .group-fcinfo .btn.active:not(.btn-primary),
+#flexicontent .group-fcprimary .btn.active:not(.btn-primary),
+#flexicontent .group-fcsuccess .btn.active:not(.btn-primary) {
 	color: #fff !important;
 	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25) !important;
 	
@@ -1191,23 +1183,27 @@ ul.fcimport_field_value_list li { margin-bottom:0em; }
 	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15) inset, 0 1px 2px rgba(0, 0, 0, 0.15) !important;
 	outline: 0 none !important;
 }
-#flexicontent .group-fcinfo .btn.active { background-color: #2f96b4 !important; border-color: #2f96b4 #2f96b4 #1f6377 !important; }
-#flexicontent .group-fcprimary .btn.active { background-color: #15497c !important; border-color: #15497c #15497c #0a223b !important; }
-#flexicontent .group-fcsuccess .btn.active { background-color: #51a351 !important; border-color: #51a351 #51a351 #387038 !important; }
+#flexicontent .group-fcinfo .btn.active:not(.btn-primary) { background-color: #2f96b4 !important; border-color: #2f96b4 #2f96b4 #1f6377 !important; }
+#flexicontent .group-fcprimary .btn.active:not(.btn-primary) { background-color: #15497c !important; border-color: #15497c #15497c #0a223b !important; }
+#flexicontent .group-fcsuccess .btn.active:not(.btn-primary) { background-color: #51a351 !important; border-color: #51a351 #51a351 #387038 !important; }
 
 
-#flexicontent div fieldset.panelform :not(.input-prepend):not(.input-append):not(.btn-group) > input,
-#flexicontent div fieldset.panelform :not(.input-prepend):not(.input-append):not(.btn-group) > button,
-#flexicontent div fieldset.panelform textarea,
-#flexicontent div fieldset.panelform select,
-#flexicontent div fieldset.panelform img,
-div fieldset :not(.input-prepend):not(.input-append):not(.btn-group) > input,
-div fieldset :not(.input-prepend):not(.input-append):not(.btn-group) > button
-div fieldset textarea,
-div fieldset select,
-div fieldset img, {
-	margin: 2px 2px 2px 0px;
-	font-size: 12px;
+/*#flexicontent div fieldset.panelform :not(.input-prepend):not(.input-append):not(.btn-group) > input,
+#flexicontent div fieldset.panelform :not(.input-prepend):not(.input-append):not(.btn-group) > button,*/
+#flexicontent form div fieldset.panelform > div.input-append, #flexicontent form div fieldset.panelform > div.input-prepend, #flexicontent form div fieldset.panelform > div.inpubtn-group,
+#flexicontent form div fieldset.panelform > input,
+#flexicontent form div fieldset.panelform > button,
+#flexicontent form div fieldset.panelform > textarea,
+#flexicontent form div fieldset.panelform > select,
+#flexicontent form div fieldset.panelform > img,
+form div fieldset > div.input-append, div fieldset > div.input-prepend, div fieldset > div.btn-group,
+form div fieldset > input,
+form div fieldset > button
+form div fieldset > textarea,
+form div fieldset > select,
+form div fieldset > img {
+	margin: 0px;
+	float: left;
 }
 #flexicontent div fieldset .input-append,
 #flexicontent div fieldset .input-prepend {
@@ -1481,10 +1477,9 @@ fieldset.flexiaccess legend, fieldset.adminform legend { font-weight:bold; font-
 #flexicontent form button:not(.btn),
 #flexicontent form select,
 #flexicontent form textarea {
-	background-color: #ffffff;
-	border: 1px solid #dddddd;
-	cursor: pointer;
-	margin: 0px 2px 0px 3px;
+	/*background-color: #ffffff;*/
+	/*border: 1px solid #dddddd;*/
+	/*cursor: pointer;*/
 	/*padding: 0.1em 0.4em 0.1em 0.2em;*/
 }
 
