--- a/site/assets/css/tabber.css
+++ b/site/assets/css/tabber.css
@@ -163,7 +163,7 @@ ul.tabbernav li.tabberactive a:hover
 	padding-top: 4px !important;
 	padding-bottom: 5px !important;
 	display: inline-block !important;
-	border-radius: 3px 3px 0px 0px !important;
+	border-radius: 4px 4px 0px 0px !important;
 	/*box-shadow: 0px -1px 1px lightgray;*/
 	border-left: 1px solid #D0D0D0;
 	border-top: 1px solid #B0B0B0;
@@ -172,7 +172,7 @@ ul.tabbernav li.tabberactive a:hover
 }
 
 #flexicontent ul.tabbernav li a {
-	border:1px solid #25729a; -webkit-border-radius: 3px; -moz-border-radius: 3px;border-radius: 3px;font-size:12px;font-family:arial, helvetica, sans-serif; padding: 10px 10px 10px 10px; text-decoration:none; display:inline-block;text-shadow: -1px -1px 0 rgba(0,0,0,0.3);font-weight:bold; color: #FFFFFF;
+	border:1px solid #25729a; font-size:12px;font-family:arial, helvetica, sans-serif; padding: 10px 10px 10px 10px; text-decoration:none; display:inline-block;text-shadow: -1px -1px 0 rgba(0,0,0,0.3);font-weight:bold; color: #FFFFFF;
 	background-color: #3093c7; background-image: -webkit-gradient(linear, left top, left bottom, from(#3093c7), to(#1c5a85));
 	background-image: -webkit-linear-gradient(top, #3093c7, #1c5a85);
 	background-image: -moz-linear-gradient(top, #3093c7, #1c5a85);
@@ -216,4 +216,5 @@ ul.tabbernav li.tabberactive a:hover
 	top: 0;
 	left: 0px;
 	width: 100%;
+	border-radius: 2px;
 }
