# Fixed select,radio(image),checkbox(image) field not possible to disable JS lib (select2 and prettyCheckable), minor fixes in backend items and fields view for cases that a filter has a value of '0'

--- a/site/assets/css/flexi_shared.css
+++ b/site/assets/css/flexi_shared.css
@@ -472,7 +472,7 @@ table.adminlist thead th {
 	border-width: 0px !important; /*avoid border of cell overlapping over the border of the row */
 	color: #555;
 	text-align: center;
-	padding: 6px 8px !important; /* allow only specific overrides */
+	padding: 6px 8px;
 }
 
 table.adminlist thead th.center { text-align: center !important; }
