--- a/site/assets/css/flexi_shared.css
+++ b/site/assets/css/flexi_shared.css
@@ -1230,6 +1230,9 @@ div fieldset td input, div fieldset td textarea, div fieldset td select {
 	border-radius:4px;
 	padding:2px 4px;
 }
+fieldset.panelform ul.adminformlist input,   fieldset.panelform ul.adminformlist button,
+fieldset.panelform ul.adminformlist textarea,fieldset.panelform ul.adminformlist select,
+fieldset.panelform ul.adminformlist img { margin-bottom: 0px; }
 
 #flexicontent .current ul.tabbernav > li a {
 	border-radius: 0px !important;
