--- a/site/assets/css/flexi_shared.css
+++ b/site/assets/css/flexi_shared.css
@@ -320,12 +320,17 @@ div.credits {
 }
 
 /* Access */
-fieldset.flexiaccess legend {
-	background: url(../images/toggle_blue.png) no-repeat 98% 50% !important;
-	padding-right: 22px !important;
-	line-height: 18px !important;
-	cursor: pointer !important;
-	color: #3276B1 !important;
+#flexicontent fieldset#flexiaccess,
+#flexicontent fieldset.flexiaccess {
+	margin-top: 8px;
+	margin-bottom: 8px;
+}
+#flexicontent fieldset#flexiaccess legend,
+#flexicontent fieldset.flexiaccess legend {
+	padding: 0 6px 0 24px;
+	background: url("../images/toggle_blue.png") no-repeat scroll 4px 50% rgba(0, 0, 0, 0) !important;
+	box-sizing: border-box;
+	cursor: pointer;
 }
 option[disabled], option[readonly] { color: #bbb; }
 /* Categories in the items view */
@@ -1486,10 +1491,8 @@ fieldset.flexiaccess, fieldset.adminform,
 	color: #3276B1;
 }
 
-fieldset.flexiaccess, fieldset.adminform { margin-bottom: 1em !important; }
-fieldset.flexiaccess { margin-top: 8px; }
-fieldset.flexiaccess legend, fieldset.adminform legend { font-weight:bold; font-size: 14px; }
-
+fieldset.adminform { margin-bottom: 1em; }
+fieldset.adminform legend { font-weight:bold; font-size: 14px; }
 #flexicontent form :not(.input-prepend):not(.input-append):not(.btn-group) > input:not(.btn),
 #flexicontent form button:not(.btn),
 #flexicontent form select,
