--- a/admin/models/forms/type.xml
+++ b/admin/models/forms/type.xml
@@ -382,12 +382,15 @@
 			<field name="notauthurl" type="menuitem" default="" disable="separator" state="1" published="1" label="FLEXI_CANNOTAUTHOR_URL" description="FLEXI_CANNOTAUTHOR_URL_DESC" />
 			
 			<field name="" type="separator" default="FLEXI_SHOW_CAPTCHA_CRITERIA" label="" level="level2" />
-			
-			<field name="use_captcha" type="radio" default="" label="FLEXI_USER_TYPE" description="FLEXI_USER_TYPE_DESC" class="btn-group btn-group-yesno">
+			<field name="use_captcha" type="multilist" subtype="radio" default="" label="FLEXI_USE_CAPTCHA" description="FLEXI_USE_CAPTCHA_DESC" class="btn-group btn-group-yesno">
 				<option value="">FLEXI_USE_GLOBAL</option>
-				<option value="0">FLEXI_NEVER</option>
+				<option value="0">FLEXI_DISABLE</option>
 				<option value="1">FLEXI_GUESTS_RECOMMENEDED</option>
 				<option value="2">FLEXI_ANY_USER</option>
+			</field>
+			<field name="captcha" type="plugins" folder="captcha" default="" label="FLEXI_CAPTCHA_PLG" description="FLEXI_CAPTCHA_PLG_DESC" filter="cmd">
+				<option value="">FLEXI_USE_GLOBAL</option>
+				<option value="0">JOPTION_DO_NOT_USE</option>
 			</field>
 			<field name="captcha_formop" type="radio" default="" label="FLEXI_OPERATION_TYPE" description="FLEXI_OPERATION_TYPE_DESC" class="btn-group btn-group-yesno">
 				<option value="">FLEXI_USE_GLOBAL</option>
