--- a/admin/models/forms/type.xml
+++ b/admin/models/forms/type.xml
@@ -51,8 +51,8 @@
 			
 			<field name="" type="separator" default="FLEXI_EDITING_PARAMETERS" level="level2" />
 			<field name="hide_maintext" type="multilist" subtype="radio" default="0" toggle_related="1" label="FLEXI_HIDE_MAINTEXT" description="FLEXI_HIDE_MAINTEXT_DESC" class="btn-group btn-group-yesno">
-				<option value="0" show_list="" hide_list="display_maintext">FLEXI_NO</option>
-				<option value="1" show_list="display_maintext" hide_list="">FLEXI_YES</option>
+				<option value="0" show_list="display_maintext" hide_list="">FLEXI_NO</option>
+				<option value="1" show_list="" hide_list="display_maintext">FLEXI_YES</option>
 			</field>
 			<field name="maintext_hide_html" type="radio" default="" label="FLEXI_FIELD_TEXTAREA_EDITOR_MODE" description="FLEXI_FIELD_TEXTAREA_EDITOR_MODE_DESC" depend_class="display_maintext" class="btn-group group-fcsuccess">
 				<option value="">FLEXI_USE_GLOBAL</option>
