+ Prepared adding (items) edit, edit.own, edit.state, edit.state.own, delete, delete.own privileges in type configuration ('create' is already there), also cleaner item ACL access check moved all work into the model for item view / item form, into item model method getItemAccess, including temporary edit allowed and edit coupon checks

--- a/site/assets/css/flexi_shared.css
+++ b/site/assets/css/flexi_shared.css
@@ -1737,7 +1737,7 @@ ul.thumbnails.image_picker_selector li div.thumbnail p {
 
 /* Table for forms with label styling */
 table.fc-form-tbl td {
-	vertical-align: top;
+	vertical-align: middle;
 	padding: 4px 24px 4px 0px;
 }
 table.fc-form-tbl td.key {
