--- a/site/assets/css/flexi_shared.css
+++ b/site/assets/css/flexi_shared.css
@@ -909,8 +909,8 @@ ul.fcimport_field_value_list li { margin-bottom:0em; }
 #flexicontent .fcfield-sortables > li .input-prepend { float: left; margin-bottom: 0px; }
 #flexicontent .fcfield-sortables > li .input-append { margin-right: 10px; }
 #flexicontent .fcfield-sortables > li .use_select2_lib { vertical-align: top; }
-#flexicontent .fcfield-sortables > li > * { vertical-align: top; }
-
+#flexicontent .fcfield-sortables > li > * { vertical-align: top; cursor: pointer;}
+#flexicontent .fcfield-sortables > li > .fcfield-drag-handle {cursor: move;}
 
 /* FIELD-GROUP: list of value containers */
 #flexicontent ul.fcfield-sortables.fcfield-group {
