# Fixed item model bug, introduced by custom filtering of description field via onBeforeSaveField, also some item model code cleanups and fixed bug with separator of multi-value CORE fields (categories/tags) only applied to the first item in category view

--- a/admin/assets/css/flexicontentbackend.css
+++ b/admin/assets/css/flexicontentbackend.css
@@ -2,6 +2,10 @@
 @import url('../../../../../components/com_flexicontent/assets/css/flexi_containers.css');
 @import url('../../../../../components/com_flexicontent/assets/css/flexi_shared.css');
 
+#flexicontent.flexicontent {
+	margin-bottom: 24px;   /* needed because of Joomla's bottom info bar overlaping the content */
+}
+
 .flexicontent [class^="icon-"]:before, .flexicontent [class*=" icon-"]:before {
 	font-size: 14px;
 	vertical-align: bottom;
