^ Tested and fixed / improved form validation, in particular fixed a) label invalidation in cases that fields style form elements via JS, and the label invalidation in fieldgroup field, related adding and removing new element via JS. Tested but possibly will do a little more improvements later

--- a/site/assets/css/flexi_shared.css
+++ b/site/assets/css/flexi_shared.css
@@ -1430,12 +1430,13 @@ select.invalid, input.invalid, textarea.invalid {
 	border: 1px dotted #CC0000 !important;
 }
 
-.use_prettycheckable.invalid + a + label,
+/*.use_prettycheckable.invalid + a + label,
 input.invalid + .fccheckradio_lbl {
 	color: #cc0000 !important;
-	border: 1px dotted #CC0000 !important;
-	border-radius: 4px;
 }
+.use_prettycheckable.invalid + a + label > img {
+	border: 1px dotted #CC0000 !important;
+}*/
 #flexicontent .label.invalid,
 #flexicontent .label-fcinner.invalid,
 #flexicontent .flexi_label.invalid,
