+Adds a link to the item and category view that allows the user to edit the item in the back-end. We kept the current edit button from the front end.
- We didn't implemented to the actual EDIT Item view because if the client closes the new TAB without saving it or canceling it, the item will be protected by the session and no one can edit it.

--- a/admin/models/forms/category.xml
+++ b/admin/models/forms/category.xml
@@ -343,7 +343,8 @@
 			<field name="show_editbutton_lists" type="radio" default="" label="FLEXI_SHOW_EDIT_BUTTON_IN_LISTS" description="FLEXI_SHOW_EDIT_BUTTON_IN_LISTS_DESC" class="btn-group btn-group-yesno">
 				<option value="">FLEXI_USE_GLOBAL</option>
 				<option value="0">FLEXI_HIDE</option>
-				<option value="1">FLEXI_SHOW</option>
+				<option value="1">FLEXI_SHOWFRONT</option>
+				<option value="2">FLEXI_SHOWBACK</option>
 			</field>
 			<field name="show_comments_count" type="radio" default="" label="FLEXI_SHOW_COMMENTS_COUNTER" description="FLEXI_SHOW_COMMENTS_COUNTER_DESC" class="btn-group btn-group-yesno">
 				<option value="">FLEXI_USE_GLOBAL</option>
